--- a/app/globals.css
+++ b/app/globals.css
@@ -176,3 +176,34 @@ $serif: "Lora", serif;
   padding-left: 30%;
   font-size: 0.8em;
 }
+
+/* Add this media query for responsive mode */
+@media screen and (max-width: 767px) {
+  .wrapper {
+    flex-direction: column; /* Stack the left and right containers vertically */
+    align-items: center; /* Center the containers horizontally */
+  }
+
+  .left-container {
+    width: 100%; /* Take the full width of the screen */
+    padding: 10% 5% 0 5%; /* Adjust the padding for spacing */
+  }
+
+  .right-container {
+    width: 100%; /* Take the full width of the screen */
+    padding: 2% 5% 2% 5%; /* Adjust the padding for spacing */
+  }
+
+  .content {
+    text-align: center; /* Center the content within the right container */
+    padding: 5px;
+  }
+
+  .featured-image {
+    text-align: center; /* Center the image within the right container */
+    padding-top: 10%;
+    img {
+      width: 230px; /* Adjust the image size for responsive mode */
+    }
+  }
+}
